network/firewallrules.tf
resource "google_compute_firewall" "deny-all-ingress" {
  name    = "deny-all-ingress"
  network = google_compute_network.vpc.name

  source_ranges = ["0.0.0.0/0"]
  target_tags   = ["private-subnet"]
  direction     = "INGRESS"
  priority      = 1002

  deny {
    protocol = "all"
  }
}

resource "google_compute_firewall" "allow-iap" {
  name    = "allow-iap"
  network = google_compute_network.vpc.name

  source_ranges = ["35.235.240.0/20"]  # Google Front Ends (GFEs) for IAP
  target_tags   = ["private-subnet"]
  direction     = "INGRESS"
  priority      = 1000

  allow {
    protocol = "tcp"
    ports    = ["22"]  
  }
}

resource "google_compute_firewall" "allow-http" {
  name    = "allow-http"
  network = google_compute_network.vpc.name

  source_ranges = ["0.0.0.0/0"]
  target_tags   = ["private-subnet"]
  direction     = "INGRESS"
  priority      = 1001

  allow {
    protocol = "tcp"
    ports    = ["80"]
  }
}
